Add QTBUG-43968 information